sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:8: error: not found: value vrai
  vrai=false
  ^AlgCocktailSort3:15: error: not found: value vrai
        vrai=true
        ^AlgCocktailSort3:18: error: not found: value vrai
    if (vrai) {
        ^